examples/test/testpolicy17428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17428
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key21: value46
      key27: value25
      key45: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value9
          key26: value33
          key9: value40
      podSelector:
        matchLabels:
          key23: value1
          key32: value44
          key41: value10
